--- a/styles/education_section.css
+++ b/styles/education_section.css
@@ -23,13 +23,36 @@
 }
 
 #education_text {
-    overflow-x: hidden;
+    overflow: hidden;
     font-family: 'Freeman', sans-serif;
     color: aliceblue;
     font-size: 20px;
-    left: 800px;
+    left: 97px;
     position: relative;
     top: -4rem;
     text-align: left;
     width: 100%;
+    margin: 2rem;
+    padding: 1rem;
+    height: 37rem;
+}
+
+@media (max-width: 1200px) {
+}
+
+#icons {
+    position: relative;
+    top: 6.5rem;
+    right: 31rem;
+}
+
+#institutional_background {
+    position: relative;
+    left: 10rem;
+}
+
+#certifications_and_trainings {
+    position: relative;
+    top: -24.3rem;
+    right: -55rem;
 }
