--- a/styles/icons.css
+++ b/styles/icons.css
@@ -20,7 +20,7 @@
     border-radius: 1rem;
     height: 54px;
     width: auto;
-    left: 676px;
-    top: 328px;
+    left: 1431px;
+    top: 61px;
     position: relative;
 }
