--- a/styles/parallax.css
+++ b/styles/parallax.css
@@ -4,12 +4,24 @@ html {
 
 section {
     width: 100%;
-    height: 800px;
+    /* height: 800px; */
+    height: 80vh;
+    /* min-height: 100vh; */
+    padding: 0;
+    margin: 0;
+
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #1c1c1c;
     background-attachment: fixed;
+}
+
+@media (max-width: 1200px) {
+    section {
+        width: 240%; /* Aplica somente em telas menores */
+    }
 }
 
 section:nth-of-type(1) {
