--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,8 +6,11 @@
     flex-direction: column;
 
     align-items: center;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
+
+    width: 100vw;
+    height: 100vh;
 
     justify-content: center;
     font-family: 'Freeman', sans-serif;
@@ -16,11 +19,12 @@
 .projects_section .row {
     align-items: center;
     position: relative;
+    top: -7rem;
 }
 
 .projects_section .col-md-6 {
     position: relative;
-    top: 50px;
+    top: 0px;
 }
 
 .projects_section .button-container {
@@ -211,22 +215,15 @@
 #projects_title {
     color: #4acbd9d0;
     background-color: black;
-    
-    /* padding-top: 40px;
-    padding-bottom: 40px;
-    padding-left: 5px; */
     padding: 0.5rem;
-
+    top: 140rem;
     writing-mode: vertical-rl;
     transform: rotate(-180deg);
     text-align: center;
     margin: 0px;
     position: absolute;
-    /* font-size: 141px; */
     font-size: 4.19rem;
-    /* height: 800px; */
-    height: 850px;
-    /* left: -9px; */
+    height: 910px;
     left: 0px;
 }
 
